--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@
 }
 
 :root {
-   --radius: 0.5rem;
+   --radius: 1rem;
    --background: oklch(1 0 0);
    --foreground: oklch(0.141 0.005 285.823);
    --card: oklch(1 0 0);
@@ -118,5 +118,14 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+@layer utilities {
+  .header-button {
+    @apply cursor-pointer p-1 border border-transparent hover:border-white rounded-[2px];
+  }
+
+  .h1-bold {
+    @apply font-bold text-2xl lg:text-3xl;
   }
 }
