--- a/app/globals.css
+++ b/app/globals.css
@@ -136,3 +136,9 @@ html, body {
   padding: 0;
   box-sizing: border-box;
 }
+
+.leaflet-container {
+  width: 100% !important;
+  height: 400px !important;
+  min-height: 400px !important;
+}
