--- a/app/(root)/page/customer-service/ProfileCard.css
+++ b/app/(root)/page/customer-service/ProfileCard.css
@@ -256,11 +256,12 @@
 }
 
 .pc-avatar-content .avatar {
-  width: 100%;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scale(1);
-  bottom: 2px;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
   opacity: calc(1.75 - var(--pointer-from-center));
 }
 
